[tool.poetry]
name = "pengine"
version = "0.1.0"
description = "A game engine built on pygame"
authors = ["daniel davee <daniel.v.davee@gmail.com>"]
license = "Apache License2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.1"
plac = "^1.3.5"
polar-vortex = "^0.1.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
flake8 = "^6.1.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
